--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="AenwehzIlm2b2GZBhCZC0W5ftKwbloftWJN88iBFW88" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>gitwb</title>
 </head>
 <body>
 	<style>
