--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@ Some codes and tools are free, others are paid, and some can be shared with paid
               <a> jQuery </a>
 
                 <div class="card-icon">
-                   <a> JavaScript </a>
+                  <img src="./assets/images/jquery.png" alt="jQuery logo">
            
                 </div>
               </div>
@@ -1691,7 +1691,6 @@ Some codes and tools are free, others are paid, and some can be shared with paid
         </div>
 
       </section>
-      <br>
 
 
 
