--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- 
     - google font link
@@ -301,7 +301,7 @@ Some codes and tools are free, others are paid, and some can be shared with paid
               <a> jQuery </a>
 
                 <div class="card-icon">
-                  <img src="./assets/images/jquery.png" alt="jQuery logo">
+                   <a> JavaScript </a>
            
                 </div>
               </div>
@@ -347,6 +347,7 @@ Some codes and tools are free, others are paid, and some can be shared with paid
         </div>
 
       </section>
+      <br>
 
 
 
@@ -645,7 +646,7 @@ Some codes and tools are free, others are paid, and some can be shared with paid
   <!-- 
     - custom js link
   -->
-  <script src="script1.js"></script>
+  <script src="./assets/js/script.js"></script>
 
   <!-- 
     - ionicon link
@@ -656,6 +657,3 @@ Some codes and tools are free, others are paid, and some can be shared with paid
 </body>
 
 </html>
-    
-  
- 
