--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style1.css">
 
   <!-- 
     - google font link
@@ -646,7 +646,7 @@ Some codes and tools are free, others are paid, and some can be shared with paid
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script1.js"></script>
 
   <!-- 
     - ionicon link
