--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@ Some codes and tools are free, others are paid, and some can be shared with paid
 
             <li>
               <div class="skill-card">
-              <a> jQuery </a>
+              <div class="tooltip">jQuery</div>
 
                 <div class="card-icon">
-                   <a> JavaScript </a>
+                   <a> jQuery </a>
            
                 </div>
               </div>
