--- a/reset.html
+++ b/reset.html
@@ -54,7 +54,7 @@ button {
     padding: 10px 20px;
     border-radius: 6px;
     float: right;
-    background-color: #130f40;
+    background-color: #000;
     color: white;
     cursor: pointer
     
