--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="https://f.top4top.io/p_2319z84b81.png" type="image/png+xml">
+  <link rel="shortcut icon "https://c.top4top.io/p_2320d0u5y1.png" type="image/png+xml">
 
   <!-- 
     - custom css link
