--- a/signin.html
+++ b/signin.html
@@ -5,6 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+<style
+.btn:hover{
+    background: var(--blue);
+}
+
+.
+.services .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:1.5rem;
+}
+
+.services .box-container .box{
+    text-align: center;
+    border:var(--border);
+    box-shadow: var(--box-shadow);
+}
+
+.services .box-container .box img{
+    height: 8rem;
+}
+
+.services .box-container .box h3{
+    font-size: 2.3rem;
+    color:var(--black);
+}
+
+.services .box-container .box p{
+    font-size: 1.4rem;
+    color:var(--light-color);
+    padding:1rem 0;
+    line-height: 1.8;
+}
+</style>
 </head>
 <body>
     
