--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@
 
           <p class="section-subtitle">What do we offer</p>
 
-          <h2 class="h3 section-title">we offer source codes and tools? </h2>
-Some codes and tools are free, others are paid, and some can be shared with paid plans.
-          <p class="section-text">
+          
+          class="section-text">
     
           </p>
 
