--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,11 @@
 
 </head>
 <body>
+<style>
+.services .box-container .box img{
+    height: 8rem;
+
+</style>
         <section class="services" id="services">
     	    <div class="box-container">
 
