--- a/editor.html
+++ b/editor.html
@@ -108,7 +108,7 @@ outline:none;
   width: 335px;
   height: 450px;
   border: none;
-  background-color:white;
+  background-color:#fff;
   color:black;
 }
 </style>
