--- a/privacyp.html
+++ b/privacyp.html
@@ -181,8 +181,8 @@ Description
 
  <center><div class="py-4 text-center bg-white">
     <p>
-      &copy; 2021- <span id="copy-year">2022</span> Copyright by
-      <a class="fancy text generator" href="">M-YAE Privacy Policy</a>
+      &copy;  <span id="copy-year">2022</span> Copyright by
+      <a class="fancy text generator" href="https://www.gitwb.cf">gitwb Privacy Policy</a>
 	</p>
   </div></center>
   
