--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <button id="signup">SignUp</button>
             </a>
         </div>
-
+       <div class="loggedin-div" id="user_div">
         <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <meta http-equiv="refresh" content="0; href="home.html"> -->
+    <!-- <meta http-equiv="refresh" content="0; url=http://gitwb.cf/home"> -->
     <title>Document</title>
 </head>
 <body>
