--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--
     - google font link
@@ -214,7 +214,8 @@
                 <p class="service-item-text">
                   Tool link html code css js to each other with result 
                 </p>
-                	       <a href="editor" >Run</a>
+            
+                	       <a href="editor" class= "btn" >Run</a>
               </div>
 
             </li>
@@ -231,7 +232,7 @@
                 <p class="service-item-text">
                   A tool that markets privacy to your site in html
                 </p>
-                	       <a href="privacyp">Run</a>
+                	       <a href="privacyp" class= "btn" >Run</a>
               </div>
 
             </li>
@@ -249,7 +250,7 @@
                   Code encryption tool with password mode
                 
                 </p>
-                	       <a href="encrypted">Run</a>
+                	       <a href="encrypted" class= "btn" >Run</a>
               </div>
 
             </li>
@@ -267,7 +268,7 @@
                 <p class="service-item-text">
         Audio translation tool for all languages
                 </p>
-                           	       <a href="translate">Run</a>
+                           	       <a href="translate" class= "btn"  >Run</a>
               </div>
 
             </li>
@@ -1091,7 +1092,7 @@
   <!--
     - custom js link
   -->
-  <script src="script1.js"></script>
+  <script src="./assets/js/script.js"></script>
 
   <!--
     - ionicon link
