--- a/reset.html
+++ b/reset.html
@@ -55,7 +55,7 @@ button {
     border-radius: 6px;
     float: right;
     background-color: #000;
-    color: white;
+    color: #FFD36A;
     cursor: pointer
     
 }
