--- a/reset.html
+++ b/reset.html
@@ -172,7 +172,7 @@ label {
       <section class="container reset-container">
           <fieldset>
             <div>
-              <img src="https://l.top4top.io/p_23200ck361.jpg">
+              <img src="https://k.top4top.io/p_23228fnpz1.png">
         <title></title>
         <script src="auth.js"></script>
     </head>
