--- a/signin.html
+++ b/signin.html
@@ -42,7 +42,7 @@
             <a href="profile">
                 <button id="signup">Update Profile</button>
 <br>
-            <a href="index.html">
+            <a href="index">
                 <button id="signup">Get started </button>
             </a>
         </div>
