--- a/editor.html
+++ b/editor.html
@@ -16,7 +16,7 @@
 body {
     font-family:arial;
   height: 500px;
-  background-color:#fff;
+  background-color:#121212 ;
   color:white;
 }
 
@@ -71,7 +71,7 @@ header{
     top:0;
     height:45px;
     z-index:99;
-    background-color:#fff;
+    background-color:#121212;
     color:white;
     border-bottom:1px solid white;
 }
@@ -118,8 +118,8 @@ outline:none;
     <header>
         <table border=0 width="100%" height="45px">
             <tr>
-                <td style='font-size:22px;'>  <a target="_blank" href='#' style='text-decoration :none;color:white;'><b><font color="yellow">© </font> <font color="black"> gitwb </font></b></a></td>
-                <td width="150px"><center><button onclick='saveTextAsFile()' style="background-color:#000;color:white;padding:8px;cursor:pointer;border-radius:8px;width:100%;border:2px solid black;"><i class="fa fa-download"></i>   Convert </button></center></td>
+                <td style='font-size:22px;'>  <a target="_blank" href='#' style='text-decoration :none;color:white;'><b><font color="#FFD36A">© </font> <font color="white"> gitwb </font></b></a></td>
+                <td width="150px"><center><button onclick='saveTextAsFile()' style="background-color:#000;color:#FFD36A;padding:8px;cursor:pointer;border-radius:8px;width:100%;border:2px solid black;"><i class="fa fa-download"></i>   Convert </button></center></td>
             </tr>
         </table>
     </header>
@@ -129,7 +129,7 @@ outline:none;
   <button class="tablinks" style='width:20%;' id='open' onclick="openCity(event, 'London')">HTML</button>
   <button class="tablinks" style='width:20%;'  onclick="openCity(event, 'Paris')">CSS</button>
   <button class="tablinks"style='width:20%;'  onclick="openCity(event, 'Tokyo')">JS</button>
-  <button style='background-color:#0abde3 ;font-weight: 700;color:white;width:40%;' class="tablinks" onclick="openCity(event, 'Preview')">Preview</button>
+  <button style='background-color:#FFD36A ;font-weight: 700;color:black;width:40%;' class="tablinks" onclick="openCity(event, 'Preview')">Preview</button>
 </div>
 
 <div id="London" class="tabcontent">
