--- a/privacyp.html
+++ b/privacyp.html
@@ -21,8 +21,8 @@
   vertical-align: top;
 }
   Body {
-  	background-color: #fff;
-      color: #000;
+  	background-color: #121212;
+      color: #fff;
  } 
   </style>
   
@@ -38,7 +38,7 @@
 button {
   background-color: #000; /* Green */
   border: none;
-  color: #fff;
+  color: #FFD36A;
   border-radius: 1rem;
   padding: 12px 28px;
   text-align: center;
