--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="https://b.top4top.io/p_2322j1dd41.jpg" alt="Gitwb" width="80">
+          <img src="https://k.top4top.io/p_23228fnpz1.png" alt="Gitwb" width="80">
         </figure>
 
         <div class="info-content">
