--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>Menu</span>
 
           <ion-icon name="list"></ion-icon>
         </button>
@@ -112,7 +112,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://facebook.com/gitwb0" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
