--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
               <a href="plan" class="contact-link">Plan</a>
             </div>
            
+           
 
 
           </li>
@@ -612,7 +613,7 @@
       <article class="code" data-page="code">
 
         <header>
-          <h2 class="h2 article-title">Source codes html </h2>
+          <h2 class="h2 article-title">Source codes </h2>
         </header>
 
         <section class="projects">
@@ -961,7 +962,7 @@
               <a href="page4">
 
                 <figure class="blog-banner-box">
-                  <img src="https://l.top4top.io/p_2323aa43c1.jpg" alt="" loading="lazy">
+                  <img src="https://h.top4top.io/p_2323svp9r1.jpg" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
