--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>music player</button>
+              <button data-filter-btn>music player </button>
             </li>
 
             <li class="filter-item">
@@ -643,6 +643,10 @@
                           <li class="select-item">
                 <button data-select-item>landing page</button>
               </li>
+              
+                      <li class="select-item">
+                <button data-select-item>live player </button>
+              </li>  
           </ul>
 
           <div class="filter-select-box">
@@ -682,170 +686,175 @@
             <li class="select-item">
                 <button data-select-item>landing page</button>
               </li>
+              
+                     <li class="select-item">
+                <button data-select-item>live player </button>
+              </li>  
+
             </ul>
 
           </div>
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+        <li class="project-item  active" data-filter-item data-category="music player">
+              <a href="music1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="https://j.top4top.io/p_2323vj4uv1.jpg" alt="" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">music player 1</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">music player</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="music player">
+              <a href="music2">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="https://g.top4top.io/p_2323crtcb1.jpg" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">music player 2</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">music player </p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="video player">
+              <a href="video1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="https://k.top4top.io/p_2323c7it31.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">video player 1</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">video player</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="photo gallery">
+              <a href="gallery1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="https://c.top4top.io/p_2323vyh7q1.jpg" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">photo gallery 1</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">photo gallery</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="photo gallery">
+              <a href="gallery2">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="https://k.top4top.io/p_2323a93pk1.jpg" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">photo gallery 2</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">photo gallery</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="landing page">
+              <a href="landing1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="https://j.top4top.io/p_2323a39th1.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">landing page 1</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">landing page</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="landing page">
+              <a href="landing2">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="https://k.top4top.io/p_23237tcaq1.jpg" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">landing page 2</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">landing page</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="live player">
+              <a href="live">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="https://i.top4top.io/p_2323c2tyn1.jpg" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">live player1</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">live player</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="login form" >
+              <a href="logins1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                  <img src="https://b.top4top.io/p_2323edeql1.jpg" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Login1</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">login form</p>
 
               </a>
             </li>
