--- a/page1.html
+++ b/page1.html
@@ -181,7 +181,7 @@ html::-webkit-scrollbar-thumb{
 
 <section class="services" id="services">
   	
-  	    <h3>GITWB</h3>
+  	    <h3>&copy; GITWB</h3>
   <br>
     <div class="box-container">
     	
