--- a/privacyp.html
+++ b/privacyp.html
@@ -36,7 +36,7 @@
 <style id='page-skin-1' type='text/css'>
 
 button {
-  background-color: #121212; /* Green */
+  background-color: #FFD36A; /* Green */
   border: none;
   color: #000;
   border-radius: 1rem;
