--- a/profile.html
+++ b/profile.html
@@ -1,39 +1,5 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <section>
-        <div class="signup_div">
-            <h3>Edit Profile</h3>
-            <input type="text" id="username_updated_val" placeholder="Enter Your new Username: " required />
-            <input type="text" id="image_file_field" placeholder="Enter Your Display Picture URL: " required />
-
-            <button onclick="updateProfile()">UPDATE</button>
-
-            <h3>Cancel ?</h3>
-            <a href="index">
-                <button>Back</button>
-            </a>
-        </div>
-
-        
-        
-    </section>
-
-
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-
-<script src="init.js"></script>
-
-<script src="script.js"></script>
-
-</body>
-</html>
+<script type="text/javascript">
+<!--
+document.write(unescape('%3c%21%44%4f%43%54%59%50%45%20%68%74%6d%6c%3e%0d%0a%3c%68%74%6d%6c%20%6c%61%6e%67%3d%22%65%6e%22%3e%0d%0a%3c%68%65%61%64%3e%0d%0a%20%20%20%20%3c%6d%65%74%61%20%63%68%61%72%73%65%74%3d%22%55%54%46%2d%38%22%3e%0d%0a%20%20%20%20%3c%6d%65%74%61%20%6e%61%6d%65%3d%22%76%69%65%77%70%6f%72%74%22%20%63%6f%6e%74%65%6e%74%3d%22%77%69%64%74%68%3d%64%65%76%69%63%65%2d%77%69%64%74%68%2c%20%69%6e%69%74%69%61%6c%2d%73%63%61%6c%65%3d%31%2e%30%22%3e%0d%0a%20%20%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%2e%63%73%73%22%3e%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%3c%62%6f%64%79%3e%0d%0a%0d%0a%20%20%20%20%3c%73%65%63%74%69%6f%6e%3e%0d%0a%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%73%69%67%6e%75%70%5f%64%69%76%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%68%33%3e%45%64%69%74%20%50%72%6f%66%69%6c%65%3c%2f%68%33%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%69%6e%70%75%74%20%74%79%70%65%3d%22%74%65%78%74%22%20%69%64%3d%22%75%73%65%72%6e%61%6d%65%5f%75%70%64%61%74%65%64%5f%76%61%6c%22%20%70%6c%61%63%65%68%6f%6c%64%65%72%3d%22%45%6e%74%65%72%20%59%6f%75%72%20%6e%65%77%20%55%73%65%72%6e%61%6d%65%3a%20%22%20%72%65%71%75%69%72%65%64%20%2f%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%69%6e%70%75%74%20%74%79%70%65%3d%22%74%65%78%74%22%20%69%64%3d%22%69%6d%61%67%65%5f%66%69%6c%65%5f%66%69%65%6c%64%22%20%70%6c%61%63%65%68%6f%6c%64%65%72%3d%22%45%6e%74%65%72%20%59%6f%75%72%20%44%69%73%70%6c%61%79%20%50%69%63%74%75%72%65%20%55%52%4c%3a%20%22%20%72%65%71%75%69%72%65%64%20%2f%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%20%6f%6e%63%6c%69%63%6b%3d%22%75%70%64%61%74%65%50%72%6f%66%69%6c%65%28%29%22%3e%55%50%44%41%54%45%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%68%33%3e%43%61%6e%63%65%6c%20%3f%3c%2f%68%33%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%61%20%68%72%65%66%3d%22%69%6e%64%65%78%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%3e%42%61%63%6b%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%2f%61%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%0d%0a%20%20%20%20%20%20%20%20%0d%0a%20%20%20%20%3c%2f%73%65%63%74%69%6f%6e%3e%0d%0a%0d%0a%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%22%68%74%74%70%73%3a%2f%2f%77%77%77%2e%67%73%74%61%74%69%63%2e%63%6f%6d%2f%66%69%72%65%62%61%73%65%6a%73%2f%38%2e%30%2e%30%2f%66%69%72%65%62%61%73%65%2d%61%70%70%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%22%68%74%74%70%73%3a%2f%2f%77%77%77%2e%67%73%74%61%74%69%63%2e%63%6f%6d%2f%66%69%72%65%62%61%73%65%6a%73%2f%38%2e%30%2e%30%2f%66%69%72%65%62%61%73%65%2d%61%6e%61%6c%79%74%69%63%73%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%22%68%74%74%70%73%3a%2f%2f%77%77%77%2e%67%73%74%61%74%69%63%2e%63%6f%6d%2f%66%69%72%65%62%61%73%65%6a%73%2f%38%2e%30%2e%30%2f%66%69%72%65%62%61%73%65%2d%61%75%74%68%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%22%69%6e%69%74%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%22%73%63%72%69%70%74%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%0d%0a%3c%2f%62%6f%64%79%3e%0d%0a%3c%2f%68%74%6d%6c%3e'));
+//-->
+</script>
