--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -13,7 +13,7 @@ body {
     </style>
 <h1>Privacy Policy for gitwb</h1>
 
-<p>At gitwb, accessible from <a <a href="Http://gitwb.tk">http://gitwb.tk</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by gitwb and how we use it.</p>
+<p>At gitwb, accessible from <a <a href="https://gitwb.cf">https://gitwb.cf</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by gitwb and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
