--- a/tweaks.html
+++ b/tweaks.html
@@ -101,7 +101,7 @@
     <meta data-name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylen.css">
     
     <!--===== Boxicons CSS =====-->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -169,7 +169,7 @@
         </div>
     </div>
 
-    <!--<script src="script.js"></script>-->
+    <!--<script src="scrijpt.js"></script>-->
 </body>
 </html>
 
