--- a/tweak8.html
+++ b/tweak8.html
@@ -194,7 +194,7 @@ h6{
      <div class="box-container">
 
        <div class="box">
-                	     <img src="https://c.top4top.io/p_2331efo6x1.jpg" alt="">
+                	     <img src="https://l.top4top.io/p_2331mdwb71.jpg" alt="">
         
             <p>Brings animated table scrolling to all tables on ios</p>
         
