--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>gitwb</title>
+<title>Document</title>
 <style>
 * {
   margin: 0;
@@ -165,7 +165,7 @@ ul.listing > li > a:hover{
         bottom: -49px;
   }
   .counter-timer li {
-      font-size: 12px;
+      font-size: 8px;
   }
 
   .coming-soon-inner:before {
@@ -245,6 +245,9 @@ ul.listing > li > a:hover{
       <h1 class="heading">Coming Soon</h1>
       <h2 class="small-heading">Under maintenance</h2>
       <div class="counter-timer">
+      	<br>
+      	<br>
+      	<br>
         <ul>
             <li><span id="days"></span>days</li>
             <li><span id="hours"></span>Hours</li>
