--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>gitwb</title>
 <style>
 * {
   margin: 0;
@@ -243,7 +243,7 @@ ul.listing > li > a:hover{
   <section class="coming-soon">
     <div class="coming-soon-inner">
       <h1 class="heading">Under maintenance</h1>
-      <h2 class="small-heading">&copy; 2022 Gitwb right reserved </h2>
+      <h2 class="small-heading">&copy; 2022 Gitwb</h2>
       <div class="counter-timer">
    
       
