--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ ul.listing > li > a:hover{
   </nav>
   <section class="coming-soon">
     <div class="coming-soon-inner">
-      <h1 class="heading">Under maintenance</h1>
+      <h1 class="heading">maintenance</h1>
       <h2 class="small-heading">&copy; 2022 Gitwb</h2>
       <div class="counter-timer">
    
