--- a/tweaks.html
+++ b/tweaks.html
@@ -128,7 +128,7 @@
             </div>
             <div class="image-box" data-name="reprovision">
             	    <a href="tweak3">
-                <img src="https://e.top4top.io/p_233108rgt1.jpg" alt="">
+                <img src="https://d.top4top.io/p_2337gabiw1.jpg" alt="">
                 <h6>ReProvisionReborn</h6>
             </div>
             <div class="image-box" data-name="chapters">
