--- a/signin.html
+++ b/signin.html
@@ -8,9 +8,10 @@
 
 </head>
 <body>
-	<div>
-	      <img src="https://k.top4top.io/p_23228fnpz1.png">
 
+<main>
+	      <img src="https://k.top4top.io/p_23228fnpz1.png">
+</main>
         <div class="main-div" id="login_div">
             <h3>SignIn</h3>
             <input type="email" id="email_field" placeholder="Enter Your Email ..." />
