--- a/profile.html
+++ b/profile.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="loggedin-div" id="user_div">
+    
 
-  <img id="profilepic" />
+            <img id="profilepic" />
             <br>
+            </div>
     <section>
         
         <div class="signup_div">
