--- a/pagemaker.html
+++ b/pagemaker.html
@@ -1,47 +1,5 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-  <style>
-  	body{
-  	background:#121212;
- } 
-  	h3{
-  	text-align:center;
-      color: white;
- } 
- img{
-      height:100px; 
-       width:100px;
-       margin-left:120px;
-       margin-right:auto;
-} 
-  </style>
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div id="editor">
-  <img alt="" src="https://k.top4top.io/p_23228fnpz1.png"  style="height:100px; width:100px"/>
-
-
-
-  <h3>Welcome letter</h3>
-
-
-    </tbody>
-  </table>
-</div>
-<!-- partial -->
-  <script src='https://nightly.ckeditor.com/full/ckeditor.js'></script>
-<script>
-
-CKEDITOR.replace( 'editor' );
+<script type="text/javascript">
+<!--
+document.write(unescape('%3c%68%74%6d%6c%20%6c%61%6e%67%3d%22%65%6e%22%3e%0d%0a%3c%68%65%61%64%3e%0d%0a%20%20%20%20%3c%6d%65%74%61%20%63%68%61%72%73%65%74%3d%22%55%54%46%2d%38%22%3e%0d%0a%20%20%20%20%3c%6d%65%74%61%20%6e%61%6d%65%3d%22%76%69%65%77%70%6f%72%74%22%20%63%6f%6e%74%65%6e%74%3d%22%77%69%64%74%68%3d%64%65%76%69%63%65%2d%77%69%64%74%68%2c%20%69%6e%69%74%69%61%6c%2d%73%63%61%6c%65%3d%31%2e%30%22%3e%0d%0a%20%20%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%2e%63%73%73%22%3e%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%20%20%3c%73%74%79%6c%65%3e%0d%0a%20%20%09%62%6f%64%79%7b%0d%0a%20%20%09%62%61%63%6b%67%72%6f%75%6e%64%3a%23%31%32%31%32%31%32%3b%0d%0a%20%7d%20%0d%0a%20%20%09%68%33%7b%0d%0a%20%20%09%74%65%78%74%2d%61%6c%69%67%6e%3a%63%65%6e%74%65%72%3b%0d%0a%20%20%20%20%20%20%63%6f%6c%6f%72%3a%20%77%68%69%74%65%3b%0d%0a%20%7d%20%0d%0a%20%69%6d%67%7b%0d%0a%20%20%20%20%20%20%68%65%69%67%68%74%3a%31%30%30%70%78%3b%20%0d%0a%20%20%20%20%20%20%20%77%69%64%74%68%3a%31%30%30%70%78%3b%0d%0a%20%20%20%20%20%20%20%6d%61%72%67%69%6e%2d%6c%65%66%74%3a%31%32%30%70%78%3b%0d%0a%20%20%20%20%20%20%20%6d%61%72%67%69%6e%2d%72%69%67%68%74%3a%61%75%74%6f%3b%0d%0a%7d%20%0d%0a%20%20%3c%2f%73%74%79%6c%65%3e%0d%0a%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%3c%62%6f%64%79%3e%0d%0a%3c%21%2d%2d%20%70%61%72%74%69%61%6c%3a%69%6e%64%65%78%2e%70%61%72%74%69%61%6c%2e%68%74%6d%6c%20%2d%2d%3e%0d%0a%3c%64%69%76%20%69%64%3d%22%65%64%69%74%6f%72%22%3e%0d%0a%20%20%3c%69%6d%67%20%61%6c%74%3d%22%22%20%73%72%63%3d%22%68%74%74%70%73%3a%2f%2f%6b%2e%74%6f%70%34%74%6f%70%2e%69%6f%2f%70%5f%32%33%32%32%38%66%6e%70%7a%31%2e%70%6e%67%22%20%20%73%74%79%6c%65%3d%22%68%65%69%67%68%74%3a%31%30%30%70%78%3b%20%77%69%64%74%68%3a%31%30%30%70%78%22%2f%3e%0d%0a%0d%0a%0d%0a%0d%0a%20%20%3c%68%33%3e%57%65%6c%63%6f%6d%65%20%6c%65%74%74%65%72%3c%2f%68%33%3e%0d%0a%0d%0a%0d%0a%20%20%20%20%3c%2f%74%62%6f%64%79%3e%0d%0a%20%20%3c%2f%74%61%62%6c%65%3e%0d%0a%3c%2f%64%69%76%3e%0d%0a%3c%21%2d%2d%20%70%61%72%74%69%61%6c%20%2d%2d%3e%0d%0a%20%20%3c%73%63%72%69%70%74%20%73%72%63%3d%27%68%74%74%70%73%3a%2f%2f%6e%69%67%68%74%6c%79%2e%63%6b%65%64%69%74%6f%72%2e%63%6f%6d%2f%66%75%6c%6c%2f%63%6b%65%64%69%74%6f%72%2e%6a%73%27%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%3c%73%63%72%69%70%74%3e%0d%0a%0d%0a%43%4b%45%44%49%54%4f%52%2e%72%65%70%6c%61%63%65%28%20%27%65%64%69%74%6f%72%27%20%29%3b%0d%0a%3c%2f%73%63%72%69%70%74%3e%0d%0a%0d%0a%0d%0a%3c%2f%62%6f%64%79%3e%0d%0a%3c%2f%68%74%6d%6c%3e%0d%0a%2e'));
+//-->
 </script>
-
-
-</body>
-</html>
-. 
