--- a/index.html
+++ b/index.html
@@ -1300,12 +1300,12 @@ header .container {
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>home/title>
+  <title>NAFT - NFT Markeplace</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="https://k.top4top.io/p_23228fnpz1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
   <!-- 
     - custom css link
@@ -1331,7 +1331,7 @@ header .container {
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="https://k.top4top.io/p_23228fnpz1.png" alt="NAFT logo">
+        <img src="https://k.top4top.io/p_23228fnpz1.png" alt="">
       </a>
 
       <div class="header-right">
@@ -1347,7 +1347,7 @@ header .container {
             <ul class="navbar-list">
 
               <li>
-                <a href="#hero" class="navbar-link">Home</a>
+                   <a href="#hero" class="navbar-link">Home</a>
               </li>
 
               <li>
@@ -1366,7 +1366,6 @@ header .container {
                 <a href="privacypolicy" class="navbar-link">Privacy Policy </a>
               </li>
 
-              
             </ul>
 
           </nav>
@@ -1393,7 +1392,7 @@ header .container {
 
     <article>
 
-      <!-- 
+            <!-- 
         - #HERO
       -->
 
