--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>NAFT - NFT Markeplace</title>
 
   <!-- 
     - favicon
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="stylehome.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- 
     - google font link
@@ -113,9 +113,12 @@
             </p>
 
             <div class="btn-group">
+            	<a href="signin" >
               <button class="btn btn-primary">SignIn </button>
-
+</a>
+ 	<a href="signup" >
               <button class="btn btn-secondary">SignUp </button>
+              </a>
             </div>
 
           </div>
