--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
             <button onclick="updateProfile()">UPDATE</button>
 
             <h3>Cancel ?</h3>
-            <a href="main">
+            <a href="index">
                 <button>Back</button>
             </a>
         </div>
