--- a/tweaks.html
+++ b/tweaks.html
@@ -199,5 +199,27 @@ search.addEventListener("keyup", () =>{
 })
 
 </script>
+<script>
+
+var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
+
+firebase.auth().onAuthStateChanged(function(user)
+            {
+                if(!user) 
+                {
+                    window.location.href = "main";
+                }
+            });
+
+
+</script>
+
+<script src="test.js"></script>
+
+
+    
+</body>
+</html>
+
 </body>
 </html>
