--- a/tweaks.html
+++ b/tweaks.html
@@ -199,6 +199,10 @@ search.addEventListener("keyup", () =>{
 })
 
 </script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+
 <script>
 
 var firebaseConfig = { apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU", authDomain: "reda-7d506.firebaseapp.com", projectId: "reda-7d506", storageBucket: "reda-7d506.appspot.com", messagingSenderId: "637395019512", appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d", measurementId: "G-Q7H13D1YFC" }; firebase.initializeApp(firebaseConfig); firebase.analytics();
@@ -211,15 +215,9 @@ firebase.auth().onAuthStateChanged(function(user)
                 }
             });
 
-
 </script>
 
 <script src="test.js"></script>
-
-
-    
-</body>
-</html>
 
 </body>
 </html>
