--- a/index.html
+++ b/index.html
@@ -1,85 +1,8 @@
-  <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gitwb</title>
-
-  <!--
-    - favicon
-  -->
-  <link rel="shortcut icon" href="https://k.top4top.io/p_23228fnpz1.png" type="image/x-icon">
-
-  <!--
-    - custom css link
-  -->
-  <link rel="stylesheet" href="style1. css">
-
-  <!--
-    - google font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
-
-<body>
-
-  <!--
-    - #MAIN
-  -->
-
-  <main>
-
-    <!--
-      - #SIDEBAR
-    -->
-
-    <aside class="sidebar" data-sidebar>
-
-      <div class="sidebar-info">
-
-     <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="style1.css">
-  	
-</head>
-  
-<body>
-<!-- partial:index.partial.html -->
-<div class="circle">
-	   <a href="stories">
-  <img src="https://k.top4top.io/p_23228fnpz1.png" alt="Gitwb" width="80"/>
-
-  <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
-     xml:space="preserve">  
-    <circle cx="50" cy="50" r="40" />
-       </a>
-  </svg>
-</div>
-<!-- partial -->
- 
-
-
-
-        <div class="info-content">
-          <h1 class="name" title="Gitwb">Gitwb</h1>
-
-          <p class="title">&copy;2022 All rights reserved </p>
-        </div>
-
-        <button class="info_more-btn" data-sidebar-btn>
-          <span>Menu</span>
-
-          <ion-icon name="list"></ion-icon>
-        </button>
-
-      </div>
+<script type="text/javascript">
+<!--
+document.write(unescape('%3c%21%44%4f%43%54%59%50%45%20%68%74%6d%6c%3e%0d%0a%3c%68%74%6d%6c%20%6c%61%6e%67%3d%22%65%6e%22%3e%0d%0a%0d%0a%3c%68%65%61%64%3e%0d%0a%20%20%3c%6d%65%74%61%20%63%68%61%72%73%65%74%3d%22%55%54%46%2d%38%22%3e%0d%0a%20%20%3c%6d%65%74%61%20%68%74%74%70%2d%65%71%75%69%76%3d%22%58%2d%55%41%2d%43%6f%6d%70%61%74%69%62%6c%65%22%20%63%6f%6e%74%65%6e%74%3d%22%49%45%3d%65%64%67%65%22%3e%0d%0a%20%20%3c%6d%65%74%61%20%6e%61%6d%65%3d%22%76%69%65%77%70%6f%72%74%22%20%63%6f%6e%74%65%6e%74%3d%22%77%69%64%74%68%3d%64%65%76%69%63%65%2d%77%69%64%74%68%2c%20%69%6e%69%74%69%61%6c%2d%73%63%61%6c%65%3d%31%2e%30%22%3e%0d%0a%20%20%3c%74%69%74%6c%65%3e%67%69%74%77%62%3c%2f%74%69%74%6c%65%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%66%61%76%69%63%6f%6e%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%68%6f%72%74%63%75%74%20%69%63%6f%6e%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%6b%2e%74%6f%70%34%74%6f%70%2e%69%6f%2f%70%5f%32%33%32%32%38%66%6e%70%7a%31%2e%70%6e%67%22%20%74%79%70%65%3d%22%69%6d%61%67%65%2f%78%2d%69%63%6f%6e%22%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%63%75%73%74%6f%6d%20%63%73%73%20%6c%69%6e%6b%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%31%2e%20%63%73%73%22%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%67%6f%6f%67%6c%65%20%66%6f%6e%74%20%6c%69%6e%6b%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%70%72%65%63%6f%6e%6e%65%63%74%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%6f%6f%67%6c%65%61%70%69%73%2e%63%6f%6d%22%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%70%72%65%63%6f%6e%6e%65%63%74%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%73%74%61%74%69%63%2e%63%6f%6d%22%20%63%72%6f%73%73%6f%72%69%67%69%6e%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%6f%6f%67%6c%65%61%70%69%73%2e%63%6f%6d%2f%63%73%73%32%3f%66%61%6d%69%6c%79%3d%50%6f%70%70%69%6e%73%3a%77%67%68%74%40%33%30%30%3b%34%30%30%3b%35%30%30%3b%36%30%30%26%64%69%73%70%6c%61%79%3d%73%77%61%70%22%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%3e%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%0d%0a%3c%62%6f%64%79%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%23%4d%41%49%4e%0d%0a%20%20%2d%2d%3e%0d%0a%0d%0a%20%20%3c%6d%61%69%6e%3e%0d%0a%0d%0a%20%20%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%20%20%2d%20%23%53%49%44%45%42%41%52%0d%0a%20%20%20%20%2d%2d%3e%0d%0a%0d%0a%20%20%20%20%3c%61%73%69%64%65%20%63%6c%61%73%73%3d%22%73%69%64%65%62%61%72%22%20%64%61%74%61%2d%73%69%64%65%62%61%72%3e%0d%0a%0d%0a%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%73%69%64%65%62%61%72%2d%69%6e%66%6f%22%3e%0d%0a%0d%0a%20%20%20%20%20%3c%21%44%4f%43%54%59%50%45%20%68%74%6d%6c%3e%0d%0a%3c%68%74%6d%6c%20%6c%61%6e%67%3d%22%65%6e%22%20%3e%0d%0a%3c%68%65%61%64%3e%0d%0a%20%20%3c%6d%65%74%61%20%63%68%61%72%73%65%74%3d%22%55%54%46%2d%38%22%3e%0d%0a%20%20%3c%74%69%74%6c%65%3e%3c%2f%74%69%74%6c%65%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%31%2e%63%73%73%22%3e%0d%0a%20%20%09%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%20%20%0d%0a%3c%62%6f%64%79%3e%0d%0a%3c%21%2d%2d%20%70%61%72%74%69%61%6c%3a%69%6e%64%65%78%2e%70%61%72%74%69%61%6c%2e%68%74%6d%6c%20%2d%2d%3e%0d%0a%3c%64%69%76%20%63%6c%61%73%73%3d%22%63%69%72%63%6c%65%22%3e%0d%0a%09%20%20%20%3c%61%20%68%72%65%66%3d%22%73%74%6f%72%69%65%73%22%3e%0d%0a%20%20%3c%69%6d%67%20%73%72%63%3d%22%68%74%74%70%73%3a%2f%2f%6b%2e%74%6f%70%34%74%6f%70%2e%69%6f%2f%70%5f%32%33%32%32%38%66%6e%70%7a%31%2e%70%6e%67%22%20%61%6c%74%3d%22%47%69%74%77%62%22%20%77%69%64%74%68%3d%22%38%30%22%2f%3e%0d%0a%0d%0a%20%20%3c%73%76%67%20%76%69%65%77%42%6f%78%3d%22%30%20%30%20%31%30%30%20%31%30%30%22%20%78%6d%6c%6e%73%3d%22%68%74%74%70%3a%2f%2f%77%77%77%2e%77%33%2e%6f%72%67%2f%32%30%30%30%2f%73%76%67%22%20%73%74%79%6c%65%3d%22%65%6e%61%62%6c%65%2d%62%61%63%6b%67%72%6f%75%6e%64%3a%6e%65%77%20%2d%35%38%30%20%34%33%39%20%35%37%37%2e%39%20%31%39%34%3b%22%0d%0a%20%20%20%20%20%78%6d%6c%3a%73%70%61%63%65%3d%22%70%72%65%73%65%72%76%65%22%3e%20%20%0d%0a%20%20%20%20%3c%63%69%72%63%6c%65%20%63%78%3d%22%35%30%22%20%63%79%3d%22%35%30%22%20%72%3d%22%34%30%22%20%2f%3e%0d%0a%20%20%20%20%20%20%20%3c%2f%61%3e%0d%0a%20%20%3c%2f%73%76%67%3e%0d%0a%3c%2f%64%69%76%3e%0d%0a%3c%21%2d%2d%20%70%61%72%74%69%61%6c%20%2d%2d%3e%0d%0a%20%0d%0a%0d%0a%0d%0a%0d%0a%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%69%6e%66%6f%2d%63%6f%6e%74%65%6e%74%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%68%31%20%63%6c%61%73%73%3d%22%6e%61%6d%65%22%20%74%69%74%6c%65%3d%22%47%69%74%77%62%22%3e%47%69%74%77%62%3c%2f%68%31%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%70%20%63%6c%61%73%73%3d%22%74%69%74%6c%65%22%3e%26%63%6f%70%79%3b%32%30%32%32%20%41%6c%6c%20%72%69%67%68%74%73%20%72%65%73%65%72%76%65%64%20%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%20%63%6c%61%73%73%3d%22%69%6e%66%6f%5f%6d%6f%72%65%2d%62%74%6e%22%20%64%61%74%61%2d%73%69%64%65%62%61%72%2d%62%74%6e%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%73%70%61%6e%3e%4d%65%6e%75%3c%2f%73%70%61%6e%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%69%6f%6e%2d%69%63%6f%6e%20%6e%61%6d%65%3d%22%6c%69%73%74%22%3e%3c%2f%69%6f%6e%2d%69%63%6f%6e%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%0d%0a%20%20%20%20%20%20%3c%2f%64%69%76%3e'));
+//-->
+</script>
 
       <div class="sidebar-info_more">
 
