--- a/gitwb.html
+++ b/gitwb.html
@@ -8,7 +8,7 @@
       rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="stylegiwb.css">
+<link rel="stylesheet" href="stylegitwb.css">
 
 </head>
 <body>
