--- a/YmMyM.html
+++ b/YmMyM.html
@@ -57,6 +57,7 @@ body section .header .param:hover {
 }
 body section .img-container img {
   width: 100%;
+  height:100%;
 }
 body section .like-checkbox {
   display: none;
