--- a/YmMyM.html
+++ b/YmMyM.html
@@ -55,7 +55,7 @@ body section .header .param {
 body section .header .param:hover {
   background: rgba(0, 0, 0, 0.09);
 }
-body section .img-container img {
+body section {
   width: 100%;
   
 }
