--- a/YmMyM.html
+++ b/YmMyM.html
@@ -36,6 +36,10 @@ body section {
   padding: 0;
   border: 1px solid #FFD36A ;
 }
+.img-container img {
+  width:100%;
+  height: 100%;
+} 
 body section .header {
   display: flex;
   justify-content: space-between;
