--- a/YmMyM.html
+++ b/YmMyM.html
@@ -39,6 +39,8 @@ body section {
 .img-container img {
   width:100%;
   height: 100%;
+  border-radius: 0px;
+  border: 0;
 } 
 body section .header {
   display: flex;
