--- a/gitwb.html
+++ b/gitwb.html
@@ -87,8 +87,8 @@
   </section>
   <section class="grid">
     <a href="YmMyM" class="grid__photo" style="background-image: url('https://d.top4top.io/p_2371wv9zv1.jpg');"></a>
-    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://i.top4top.io/p_2371zlr331.jpg');"></a>
-    <a href="CfXDg" class="grid__photo" style="background-image: url('https://images.unsplash.com/photo-1494253109108-2e30c049369b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');"></a>
+    <a href="A2M2Y" class="grid__photo" style="background-image: url('');"></a>
+    <a href="CfXDg" class="grid__photo" style="background-image: url('https://i.top4top.io/p_2371zlr331.jpg');"></a>
 
   </section>
 
