--- a/gitwb.html
+++ b/gitwb.html
@@ -87,7 +87,7 @@
   </section>
   <section class="grid">
     <a href="YmMyM" class="grid__photo" style="background-image: url('https://d.top4top.io/p_2371wv9zv1.jpg');"></a>
-    <a href="A2M2Y" class="grid__photo" style="background-image: url('');"></a>
+    <a href="A2M2Y" class="grid__photo" style="background-image: url('https://f.top4top.io/p_237109flc1.jpg');"></a>
     <a href="CfXDg" class="grid__photo" style="background-image: url('https://i.top4top.io/p_2371zlr331.jpg');"></a>
 
   </section>
