--- a/A2M2Y.html
+++ b/A2M2Y.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Tik Tok Clone</title>
-  <link rel="stylesheet" href="stylereel.css">
+  <link rel="stylesheet" href="style8.css">
 
 </head>
 <body>
