--- a/A2M2Y.html
+++ b/A2M2Y.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Tik Tok Clone</title>
+<html lang="en">
+<head><meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>gitwb</title>
   <link rel="stylesheet" href="style8.css">
 
 </head>
