--- a/A2M2Y.html
+++ b/A2M2Y.html
@@ -3,7 +3,7 @@
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>gitwb</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="styleg.css">
 
 </head>
 <body>
