--- a/A2M2Y.html
+++ b/A2M2Y.html
@@ -1,11 +1,10 @@
 
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>reel gitwb</title>
+<html lang="en">
+<head><meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>gitwb reel</title>
   <link rel="stylesheet" href="styleg.css">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
