--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gitwb-home</title>
 
-  <!--
-    - favicon
-  -->
-  <link rel="shortcut icon" href="https://k.top4top.io/p_23228fnpz1.png" type="image/x-icon">
+<script type="text/javascript">
+<!--
+document.write(unescape('%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%66%61%76%69%63%6f%6e%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%68%6f%72%74%63%75%74%20%69%63%6f%6e%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%6b%2e%74%6f%70%34%74%6f%70%2e%69%6f%2f%70%5f%32%33%32%32%38%66%6e%70%7a%31%2e%70%6e%67%22%20%74%79%70%65%3d%22%69%6d%61%67%65%2f%78%2d%69%63%6f%6e%22%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%63%75%73%74%6f%6d%20%63%73%73%20%6c%69%6e%6b%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%31%2e%20%63%73%73%22%3e%0d%0a%0d%0a%20%20%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%67%6f%6f%67%6c%65%20%66%6f%6e%74%20%6c%69%6e%6b%0d%0a%20%20%2d%2d%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%70%72%65%63%6f%6e%6e%65%63%74%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%6f%6f%67%6c%65%61%70%69%73%2e%63%6f%6d%22%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%72%65%6c%3d%22%70%72%65%63%6f%6e%6e%65%63%74%22%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%73%74%61%74%69%63%2e%63%6f%6d%22%20%63%72%6f%73%73%6f%72%69%67%69%6e%3e%0d%0a%20%20%3c%6c%69%6e%6b%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%6f%6e%74%73%2e%67%6f%6f%67%6c%65%61%70%69%73%2e%63%6f%6d%2f%63%73%73%32%3f%66%61%6d%69%6c%79%3d%50%6f%70%70%69%6e%73%3a%77%67%68%74%40%33%30%30%3b%34%30%30%3b%35%30%30%3b%36%30%30%26%64%69%73%70%6c%61%79%3d%73%77%61%70%22%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%3e%0d%0a%3c%2f%68%65%61%64%3e'));
+//-->
+</script>
 
-  <!--
-    - custom css link
-  -->
-  <link rel="stylesheet" href="style1. css">
-
-  <!--
-    - google font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
 
 <body>
 
