--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@ document.write(unescape('%3c%21%2d%2d%0d%0a%20%20%20%20%2d%20%66%61%76%69%63%6f%
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="style1.css">
-  	
+  <script type="text/javascript">
+<!--
+document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%31%2e%63%73%73%22%3e'));
+//-->
+</script>
+
+  
 </head>
   
 <body>
