--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta name="google-site-verification" content="AenwehzIlm2b2GZBhCZC0W5ftKwbloftWJN88iBFW88" />
 	<meta name="google-site-verification" content="AenwehzIlm2b2GZBhCZC0W5ftKwbloftWJN88iBFW88" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
