--- a/soon.html
+++ b/soon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodePen - Card Button with Image - Button Card</title>
+  <title>soon-قريبا</title>
 
 <style>
 	.content-area {
