--- a/vip-page.html
+++ b/vip-page.html
@@ -99,6 +99,7 @@ div h3{
 
 div button{
     background-color: #000;
+    border: 1px solid #FFD36A;
     color: #FFD36A;
     border: 0px  black;
     border-radius: 5px;
