--- a/vip-page.html
+++ b/vip-page.html
@@ -115,6 +115,7 @@ div button{
 div button:hover{
     background-color: #000;
     color: #FFD36A;
+border: 1px solid #FFD36A;
     border: 1px solid white;
 }
 
