--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
             <div class="contact-info">
 
 
-              <a href="vip-page" class="contact-link">Vip</a>
+              <a href="vip-page-signin" class="contact-link">Vip</a>
             </div>
            
              <li class="contact-item">
