--- a/vip-signin.html
+++ b/vip-signin.html
@@ -152,7 +152,7 @@ img {
              <img src="https://k.top4top.io/p_23228fnpz1.png">
 	      
             <h3>welcome to the vip page</h3>
-            <input type="email" id="email_field" placeholder=" Username ..." />
+            <input type="email" id="email_field" placeholder=" Email ..." />
             <input type="password" id="password_field" placeholder=" Password ..." />
        <a href="change-password">Change password ?</a>
       
