--- a/change-password.html
+++ b/change-password.html
@@ -183,7 +183,7 @@ label {
             <div>
               <img src="https://k.top4top.io/p_23228fnpz1.png">
         <title></title>
-        <script src="auth.js"></script>
+        <script src="aut.js"></script>
     </head>
   <body>
     <input type="email" placeholder="Enter Your Email " id="email_field" />
@@ -192,13 +192,13 @@ label {
   <script>
     // Initialize Firebase
     var config = {
-    apiKey: "AIzaSyAFPHSQdRugV6ngWGtPuUfSzBhS94D30hU",
-    authDomain: "reda-7d506.firebaseapp.com",
+    apiKey: "AIzaSyBmQebUmPyy79z51kb6YKkAurZ11yehXIk",
+    authDomain: "vip-page.firebaseapp.com",
     databaseURL: "",
-    projectId: "reda-7d506",
-    storageBucket: "reda-7d506.appspot.com",
-    messagingSenderId: "637395019512",
-    appId: "1:637395019512:web:1c7834e529eb90dcaf3d0d",
+    projectId: "vip-page",
+    storageBucket: "vip-page.appspot.com",
+    messagingSenderId: "809627494181",
+    appId: "1:809627494181:web:0df989d623d1cb6e119ccc",
     measurementId: "G-Q7H13D1YFC"
     };
     firebase.initializeApp(config);
