--- a/vip-signin.html
+++ b/vip-signin.html
@@ -161,7 +161,7 @@ img {
             <button onclick="login()">Login</button>
 
             <h3></h3>
-            <a href="buy-acc">
+            <a href="https://wa.me/96181112046?text=Hello%20I%20want%20a%20vip%20account">
                 <button>✴️Buy Vip  Acc✴️</button>
             </a>
             
