--- a/vip-page.html
+++ b/vip-page.html
@@ -120,7 +120,7 @@
 <body>
 	    <div class="container">
         <div class="home-box">
-       <a onclick="logout()"class="bx bx-log-out">logout</a>
+                <a onclick="logout()"class="contact-link">logout</a>
         
             </div>
       
