--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
 
               <a href="vip-signin" class="contact-link">Vip</a>
             </div>
+<li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="store"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+
+
+              <a href="store" class="contact-link">store</a>
+            </div>
            
              <li class="contact-item">
 
