--- a/store.html
+++ b/store.html
@@ -348,7 +348,7 @@ border: 1px solid #FFD36A;
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Distrelec - Products</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'><link rel="stylesheet" href="">
 
 </head>
 <body>
