--- a/store.html
+++ b/store.html
@@ -355,7 +355,7 @@ border: 1px solid #FFD36A;
 <!-- partial:index.partial.html -->
 <div class="container">
 	
-	     <a href="all-services">
+	     <a href="store">
                 <button><i class="fas fa-list"></i> All</button>
             </a>
             
