--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
                         <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="ios-card-outline"></ion-icon>
+              <ion-icon name="ios-card"></ion-icon>
             </div>
 
             <div class="contact-info">
