--- a/vip-page.html
+++ b/vip-page.html
@@ -398,7 +398,7 @@ border: 1px solid #FFD36A;
       	
         <img class="panel-logo" src="https://g.top4top.io/p_2493yi2sp1.jpg" alt="Tektronix logo">
       </div>
-      <img class="panel-image" src="https://d.top4top.io/p_24940bgle1.jpg" alt="Tektronix Thermal camera">
+      <img class="panel-image" src="https://f.top4top.io/p_2494er5vl1.jpg" alt="Tektronix Thermal camera">
       <div class="panel-body">
         <h4 class="product-title">Tools</h4>
         <hr>
@@ -406,7 +406,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>Always will be</span>
       </div>
       <div class="panel-footer">
-        <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20subscribe%20to%20the%20reporting%20bot%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A7%D8%B4%D8%AA%D8%B1%D8%A7%D9%83%20%D9%81%D9%8A%20%D8%A8%D9%88%D8%AA%20%D8%A7%D9%84%D8%A8%D9%84%D8%A7%D8%BA%D8%A7%D8%AA " class="btn btn-block btn-1">view </a>
+        <a href="tool-s" class="btn btn-block btn-1">view </a>
       </div>
     </div>
     <div class="panel">
@@ -422,7 +422,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>Always will be</span>
       </div>
       <div class="panel-footer">
-        <a href="https://wa.me/96181112046?text=Hello%20I%20want%20to%20subscribe%20to%20the%20reporting%20bot%0A%D9%85%D8%B1%D8%AD%D8%A8%D8%A7%20%D8%A7%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A7%D8%B4%D8%AA%D8%B1%D8%A7%D9%83%20%D9%81%D9%8A%20%D8%A8%D9%88%D8%AA%20%D8%A7%D9%84%D8%A8%D9%84%D8%A7%D8%BA%D8%A7%D8%AA " class="btn btn-block btn-1">view </a>
+        <a href="source-s" class="btn btn-block btn-1">view </a>
       </div>
     </div>
 
@@ -438,7 +438,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>Always will be</span>
       </div>
       <div class="panel-footer">
-        <span href="#" class="btn btn-block btn-1">view</span>
+        <span href="tweak-s"class="btn btn-block btn-1">view</span>
       </div>
     </a>
   </div>
