--- a/vip-page.html
+++ b/vip-page.html
@@ -426,23 +426,22 @@ border: 1px solid #FFD36A;
       </div>
     </div>
 
-    <a class="panel hover-float">
+ 	    <div class="panel">
       <div class="panel-header">
+      	
         <img class="panel-logo" src="https://g.top4top.io/p_2493yi2sp1.jpg" alt="Tektronix logo">
       </div>
-      <img class="panel-image" src="https://b.top4top.io/p_2494bbsqc1.jpg" alt="Tektronix Thermal camera">
+      <img class="panel-image" src="https://f.top4top.io/p_2494er5vl1.jpg" alt="Tektronix Thermal camera">
       <div class="panel-body">
-        <h4 class="product-title">Jealbreak tweaks</h4>
+        <h4 class="product-title">Jailbreak Tweaks</h4>
         <hr>
-        <h4 class="product-price">2 items</h4>
+        <h4 class="product-price">3 items</h4>
         <span class="product-stock"><i class="fas fa-info"></i>Always will be</span>
       </div>
       <div class="panel-footer">
-        <span href="tweak-s"class="btn btn-block btn-1">view</span>
+        <a href="tweak-s" class="btn btn-block btn-1">view </a>
       </div>
-    </a>
-  </div>
-</div>
+    </div>
 
 
 <!-- partial -->
