--- a/source-s.html
+++ b/source-s.html
@@ -382,7 +382,7 @@ border: 1px solid #FFD36A;
 	       <div class="home-box">
 	<button onclick="logout()"class="bx bx-log-out"> logout</button>
 
-<a href="index">
+<a href="vip-page">
              
               	 <button class="bx bx-home" > back</button> 
         </a>
