--- a/music-vip.html
+++ b/music-vip.html
@@ -276,7 +276,7 @@ a{
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Chikovani</title>
   <link rel='stylesheet' href='https://cdn.plyr.io/3.6.2/plyr.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="./style.s">
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="./style">
 
 </head>
 <body>
@@ -385,7 +385,7 @@ a{
 </main>
 <!-- partial -->
   <script src='https://cdn.plyr.io/3.6.2/plyr.js'></script>
-<script src='https://use.fontawesome.com/releases/v5.14.0/js/all.js'></script><script  src="./script.js"></script>
+<script src='https://use.fontawesome.com/releases/v5.14.0/js/all.js'></script><script  src="./scr"></script>
 
 </body>
 </html>
