--- a/vip-signin.html
+++ b/vip-signin.html
@@ -281,5 +281,6 @@ firebase.auth().onAuthStateChanged(function(user)
                     window.location.href = "main";
                 }
             });
+</script>
 </body>
 </html>
